Submission for HW4 Part 1

--- a/Homeworks/HW4/HW4-Part1.ipynb
+++ b/Homeworks/HW4/HW4-Part1.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,14 +31,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Dog:\n",
     "\n",
     "    def __init__(self, name):\n",
-    "        # assign 'name' to self here as a data attribute"
+    "        # assign 'name' to self here as a data attribute\n",
+    "        self.name = name"
    ]
   },
   {
@@ -52,9 +53,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Jojo'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "mydog.name"
    ]
@@ -69,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,16 +89,30 @@
     "\n",
     "    def __init__(self, name): \n",
     "        # your code here\n",
+    "        self.name = name;\n",
+    "        self.tricks = [];\n",
     "        \n",
     "    def add_trick(self, trick): # this is a method attribute\n",
-    "        # your code here"
+    "        # your code here\n",
+    "        self.tricks = self.tricks + [trick];"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['roll over', 'play dead', 'flippy flip']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# test your code\n",
     "mydog = Dog('Jojo')\n",
@@ -95,7 +121,7 @@
     "mydog.add_trick('flippy flip')\n",
     "\n",
     "# print the tricks here\n",
-    "mydog.### complete here"
+    "mydog.tricks### complete here"
    ]
   },
   {
@@ -108,11 +134,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# Testing out making some inputs optional\n",
+    "class Dog:\n",
+    "\n",
+    "    def __init__(self, name,age = 'Unknown',gender = 'Unknown',breed = 'Unknown'): \n",
+    "        # your code here\n",
+    "        self.name = name;\n",
+    "        self.age = age;\n",
+    "        self.gender = gender;\n",
+    "        self.breed = breed;\n",
+    "        self.tricks = []; # Store future tricks here\n",
+    "        \n",
+    "    def add_trick(self, trick): # this is a method attribute\n",
+    "        # your code here\n",
+    "        self.tricks = self.tricks + [trick];"
    ]
   },
   {
@@ -124,11 +163,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Roll Over', 'Shake']\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "pooch1 = Dog('Rover',gender = 'M',age = 5,breed = 'Bulldog')\n",
+    "pooch1.add_trick('Speak')\n",
+    "\n",
+    "pooch2 = Dog('Froofroo',gender = 'F',age = 1,breed = 'Poodle')\n",
+    "pooch2.add_trick('Roll Over'); pooch2.add_trick('Shake')\n",
+    "print(pooch2.tricks)\n",
+    "\n",
+    "pooch3 = Dog('Bowser',gender = 'M',age = 12,breed = 'Mutt')\n",
+    "pooch3.add_trick('Fetch')"
    ]
   },
   {
@@ -140,23 +196,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "class Dog:\n",
+    "\n",
+    "    def __init__(self, name,age = 'Unknown',gender = 'Unknown',breed = 'Unknown'): \n",
+    "        # your code here\n",
+    "        self.name = name;\n",
+    "        self.age = age;\n",
+    "        self.gender = gender;\n",
+    "        self.breed = breed;\n",
+    "        self.tricks = []; # Store future tricks here\n",
+    "        \n",
+    "    def add_trick(self, trick): # this is a method attribute\n",
+    "        # your code here\n",
+    "        self.tricks = self.tricks + [trick];\n",
+    "        \n",
+    "    def print_summary(self):\n",
+    "        print('name: ',self.name)\n",
+    "        print('age: ',self.age)\n",
+    "        print('gender: ',self.gender)\n",
+    "        print('breed: ',self.breed)\n",
+    "        if self.tricks: # This returns false if the list is empty, and true otherwise. \n",
+    "            print('known tricks: ',self.tricks)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name:  Rover\n",
+      "age:  5\n",
+      "gender:  M\n",
+      "breed:  Bulldog\n",
+      "\n",
+      "\n",
+      "name:  Froofroo\n",
+      "age:  1\n",
+      "gender:  F\n",
+      "breed:  Poodle\n",
+      "known tricks:  ['Roll Over', 'Shake']\n",
+      "\n",
+      "\n",
+      "name:  Bowser\n",
+      "age:  12\n",
+      "gender:  M\n",
+      "breed:  Mutt\n",
+      "known tricks:  ['Fetch']\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# create 3 dogs again with your new/modified class and \n",
+    "pooch1 = Dog('Rover',gender = 'M',age = 5,breed = 'Bulldog')\n",
+    "# pooch1.add_trick('Speak')\n",
     "\n",
+    "pooch2 = Dog('Froofroo',gender = 'F',age = 1,breed = 'Poodle')\n",
+    "pooch2.add_trick('Roll Over'); pooch2.add_trick('Shake')\n",
+    "\n",
+    "pooch3 = Dog('Bowser',gender = 'M',age = 12,breed = 'Mutt')\n",
+    "pooch3.add_trick('Fetch')\n",
+    "dogs = [pooch1,pooch2,pooch3]\n",
     "for d in dogs:\n",
-    "    d.print_summary()"
+    "    d.print_summary()\n",
+    "    print(\"\\n\")"
    ]
   },
   {
@@ -175,7 +287,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Dog:\n",
+    "\n",
+    "    def __init__(self,name,age = 'Unknown',gender = 'Unknown',breed = 'Unknown'): \n",
+    "        # your code here\n",
+    "        self.name = name;\n",
+    "        self.age = age;\n",
+    "        self.gender = gender;\n",
+    "        self.breed = breed;\n",
+    "        self.tricks = []; # Store future tricks here\n",
+    "        \n",
+    "    def add_trick(self, trick): # this is a method attribute\n",
+    "        # your code here\n",
+    "        self.tricks = self.tricks + [trick];\n",
+    "        \n",
+    "    def print_summary(self):\n",
+    "        print('name: ',self.name)\n",
+    "        print('age: ',self.age)\n",
+    "        print('gender: ',self.gender)\n",
+    "        print('breed: ',self.breed)\n",
+    "        if self.tricks: # This returns false if the list is empty, and true otherwise. \n",
+    "            print('known tricks: ',self.tricks)\n",
+    "    \n",
+    "    def return_df(self):\n",
+    "        df_out = pd.DataFrame([[self.name,self.age,self.gender,self.breed,self.tricks]],\n",
+    "                              columns = ['Name','Age','Gender','Breed','Tricks'])\n",
+    "                              #[self.name,self.age,self.gender,self.breed])\n",
+    "        return(df_out)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -199,11 +347,11 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>age</th>\n",
-       "      <th>gender</th>\n",
-       "      <th>species</th>\n",
-       "      <th>tricks</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Breed</th>\n",
+       "      <th>Tricks</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -213,33 +361,24 @@
        "      <td>12</td>\n",
        "      <td>M</td>\n",
        "      <td>collie</td>\n",
-       "      <td>roll over</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Jojo</td>\n",
-       "      <td>12</td>\n",
-       "      <td>M</td>\n",
-       "      <td>collie</td>\n",
-       "      <td>flippy flip</td>\n",
+       "      <td>[roll over, flippy flip]</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   name  age gender species       tricks\n",
-       "0  Jojo   12      M  collie    roll over\n",
-       "1  Jojo   12      M  collie  flippy flip"
+       "   Name  Age Gender   Breed                    Tricks\n",
+       "0  Jojo   12      M  collie  [roll over, flippy flip]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "jojo = Dog(name='Jojo',age=12,gender='M',species='collie')\n",
+    "jojo = Dog(name = 'Jojo',age=12,gender='M',breed='collie')\n",
     "\n",
     "jojo.add_trick('roll over')\n",
     "jojo.add_trick('flippy flip')\n",
@@ -273,7 +412,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
